--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <ul>
-<li><a href="college_details_16.html">college details 16 - generated for player 16</a></li>
-<li><a href="college_details_16.html">college details k1 - generated for k, list 1</a></li>
-<li><a href="college_details_spokane.html">college details - generated for 300 mile radius of spokane, D1, D2, D3</li>
+<li><a href="college_details_16.html">details 16</a> - generated for player 16</li>
+<li><a href="college_details_16.html">details k1</a> - generated for k, list 1</li>
+<li><a href="college_details_spokane.html">details spokane</a> - generated for 300 mile radius of spokane, D1, D2, D3</li>
     </ul>
   </body>
 </html>
