updated spokake list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
 <li><a href="college_details_16.html">details 16</a> - generated for player 16</li>
 <li><a href="college_details_16.html">details k1</a> - generated for k, list 1</li>
-<li><a href="college_details_spokane.html">details spokane</a> - generated for 300 mile radius of spokane, D1, D2, D3</li>
+<li><a href="college_details_spokane.html">details spokane</a> - generated for 300 mile radius of spokane</li>
     </ul>
   </body>
 </html>
