added chicago and reno

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <body>
     <ul>
 <li><a href="college_details_16.html">details 16</a> - generated for player 16</li>
-<li><a href="college_details_16.html">details k1</a> - generated for k, list 1</li>
-<li><a href="college_details_spokane.html">details spokane</a> - generated for 300 mile radius of spokane</li>
+<!-- <li><a href="college_details_kip.html">details k1</a> - generated for k, list 1</li> -->
+<li><a href="college_details_spokane300.html">details spokane 300</a> - generated for 300 mile radius of spokane</li>
+<li><a href="college_details_chicago300.html">details chicago 300</a> - generated for 300 mile radius of chicago</li>
+<li><a href="college_details_chicago100.html">details chicago 100</a> - generated for 100 mile radius of chicago</li>
+<li><a href="college_details_reno300.html">details reno 300</a> - generated for 300 mile radius of reno</li>
     </ul>
   </body>
 </html>
