--- a/index.html
+++ b/index.html
@@ -1,26 +1,15 @@
 <html>
   <head>
-    <style>
-      ul {
-        list-style: none;
-      }
-      img {
-        width: 300px;
-        padding-top: 50px;
-      }
-      button {
-        border-radius: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <ul>
-<li><a href="college_details_16.html">details 16</a> - generated for player 16</li>
-<!-- <li><a href="college_details_kip.html">details k1</a> - generated for k, list 1</li> -->
-<li><a href="college_details_spokane300.html">details spokane 300</a> - generated for 300 mile radius of spokane</li>
-<li><a href="college_details_chicago300.html">details chicago 300</a> - generated for 300 mile radius of chicago</li>
-<li><a href="college_details_chicago100.html">details chicago 100</a> - generated for 100 mile radius of chicago</li>
-<li><a href="college_details_reno300.html">details reno 300</a> - generated for 300 mile radius of reno</li>
+<li><a href="college_details_16.html">details 16</a> - player 16 list</li>
+<!-- <li><a href="college_details_kip.html">details k1</a> - k, list 1</li> -->
+<li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li>
+<li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li>
+<li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
+<li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
     </ul>
   </body>
 </html>
