fix spelling of graduation_rate

--- a/college_details_16.html
+++ b/college_details_16.html
@@ -50,7 +50,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Preslie Anderson</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  23-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  66%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  66%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  57% Male / 43% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  86%</li>
@@ -208,7 +208,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Tim Nollan</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Abby Saehler</li>
 <li x-show="open | openall"><b>student_ratio:</b>  17-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  34%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  34%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  27% Male / 73% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  67%</li>
@@ -313,7 +313,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Ken Murphy</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Rachel Dunlap</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  52%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  52%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  41% Male / 59% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  74%</li>
@@ -489,7 +489,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Ashlee Crowder</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Ruben Lopez</li>
 <li x-show="open | openall"><b>student_ratio:</b>  8-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  57%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  57%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  71% Male / 29% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  79%</li>
@@ -605,7 +605,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Maggie Johnson</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Jordan Armstrong</li>
 <li x-show="open | openall"><b>student_ratio:</b>  14-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  41%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  41%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  37% Male / 63% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  68%</li>
@@ -731,7 +731,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Adam Milewski</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Travis Nichols</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  52% Male / 48% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -831,7 +831,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Kacie Ehinger</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Matt Geer</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  30% Male / 70% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Trimester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  80%</li>
@@ -949,7 +949,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jenny Maurer</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Brian Doyon</li>
 <li x-show="open | openall"><b>student_ratio:</b>  30-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  70%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  70%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  45% Male / 55% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  89%</li>
@@ -1101,7 +1101,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Chris Catanach</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Brian Imperiale</li>
 <li x-show="open | openall"><b>student_ratio:</b>  17-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  55%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  55%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  42% Male / 58% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  75%</li>
@@ -1221,7 +1221,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Sharon Quarles</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Deja Moorer</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  30%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  30%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  36% Male / 64% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  75%</li>
@@ -1329,7 +1329,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jen Gomez</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Miranda Rodriguez</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  48%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  48%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  53% Male / 47% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  74%</li>
@@ -1450,7 +1450,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Chris Herron</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Shayla Conner</li>
 <li x-show="open | openall"><b>student_ratio:</b>  13-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  35%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  35%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  41% Male / 59% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  68%</li>
@@ -1589,7 +1589,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Xiomara Ortiz</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Maegan Coleman</li>
 <li x-show="open | openall"><b>student_ratio:</b>  15-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  30%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  30%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  46% Male / 54% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  76%</li>
@@ -1704,7 +1704,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Allison Lawrence</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Dana Hallisey</li>
 <li x-show="open | openall"><b>student_ratio:</b>  17-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  46% Male / 54% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -1847,7 +1847,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Josh Pickard</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Adam Rollman</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  68%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  68%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  51% Male / 49% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  82%</li>
@@ -1959,7 +1959,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Scott Smith</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Delaney Gallagher</li>
 <li x-show="open | openall"><b>student_ratio:</b>  13-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  74%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  74%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  56% Male / 44% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  88%</li>
@@ -2098,7 +2098,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Greg Goral</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Ryan Mason</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  53%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  53%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  48% Male / 52% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  74%</li>
@@ -2233,7 +2233,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Chris Willis</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Danielle (Dee) Davis</li>
 <li x-show="open | openall"><b>student_ratio:</b>  10-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  93%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  93%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  50% Male / 50% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  96%</li>
@@ -2328,7 +2328,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Adler Augustin</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Cody Carmichael</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  62%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  62%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  42% Male / 58% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  80%</li>
@@ -2480,7 +2480,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Mary Tendler</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Willie Whealen</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  83%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  83%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  41% Male / 59% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Four-one-four plan</li>
 <li x-show="open | openall"><b>retention_rate:</b>  90%</li>
@@ -2619,7 +2619,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Randi Smart</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Rebecca Rudnick-Hong</li>
 <li x-show="open | openall"><b>student_ratio:</b>  10-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  88%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  88%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  47% Male / 53% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  93%</li>
@@ -2729,7 +2729,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Alexa Keckler</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Sarah Gomish</li>
 <li x-show="open | openall"><b>student_ratio:</b>  10-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  88%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  88%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  56% Male / 44% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  95%</li>
@@ -2862,7 +2862,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Todd Hay</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Emma Lenoir</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  49%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  49%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  32% Male / 68% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -2994,7 +2994,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  David McFatrich</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Laura Grace Belote</li>
 <li x-show="open | openall"><b>student_ratio:</b>  15-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  39%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  39%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  37% Male / 63% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Four-one-four plan</li>
 <li x-show="open | openall"><b>retention_rate:</b>  65%</li>
@@ -3112,7 +3112,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Joszef Forman</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Chad Sutton</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  43%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  43%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  47% Male / 53% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  65%</li>
@@ -3223,7 +3223,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b> </li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  52%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  52%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -3332,7 +3332,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Kelly Burdeau</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Tyler Wanner</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  62%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  62%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  54% Male / 46% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Four-one-four plan</li>
 <li x-show="open | openall"><b>retention_rate:</b>  61%</li>
@@ -3421,7 +3421,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jeff Reynolds</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Kathryn Sizemore</li>
 <li x-show="open | openall"><b>student_ratio:</b>  14-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  46%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  46%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  31% Male / 69% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  69%</li>
@@ -3513,7 +3513,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Brandon Skweres</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  39%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  39%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  45% Male / 55% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  56%</li>
@@ -3616,7 +3616,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Kristee Porter</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Daniel Salinas</li>
 <li x-show="open | openall"><b>student_ratio:</b>  25-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  52%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  52%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  48% Male / 52% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  79%</li>
