--- a/college_details_kip.html
+++ b/college_details_kip.html
@@ -50,7 +50,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jason McCown</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  45%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  45%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  33% Male / 67% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  77%</li>
@@ -143,7 +143,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Micah Briscoe</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Mark Cannon</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  38%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  38%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  58% Male / 42% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  55%</li>
@@ -232,7 +232,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Tim Nollan</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Abby Saehler</li>
 <li x-show="open | openall"><b>student_ratio:</b>  17-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  34%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  34%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  27% Male / 73% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  67%</li>
@@ -337,7 +337,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jennifer Adeva</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Chris Webb</li>
 <li x-show="open | openall"><b>student_ratio:</b>  25-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  35%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  35%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  37% Male / 63% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  82%</li>
@@ -448,7 +448,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Leonid Yelin</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Christiana Oyawale</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  33%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  33%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  65%</li>
@@ -564,7 +564,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Skylar Lopas</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Pete Sproules</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  61%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  61%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  72%</li>
@@ -665,7 +665,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Fernanda Nelson</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Chuck Amshoff</li>
 <li x-show="open | openall"><b>student_ratio:</b>  23-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  49%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  49%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  44% Male / 56% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  78%</li>
@@ -795,7 +795,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Ashlee Crowder</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Ruben Lopez</li>
 <li x-show="open | openall"><b>student_ratio:</b>  8-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  57%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  57%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  71% Male / 29% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  79%</li>
@@ -911,7 +911,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Maggie Johnson</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Jordan Armstrong</li>
 <li x-show="open | openall"><b>student_ratio:</b>  14-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  41%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  41%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  37% Male / 63% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  68%</li>
@@ -1037,7 +1037,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  James Rogers</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Andrew Sydow</li>
 <li x-show="open | openall"><b>student_ratio:</b>  13-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  Not Reported</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  Not Reported</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  0% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  71%</li>
@@ -1105,7 +1105,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  James Rogers</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Andrew Sydow</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  68%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  68%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  32% Male / 68% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  89%</li>
@@ -1225,7 +1225,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Adam Milewski</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Travis Nichols</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  52% Male / 48% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -1325,7 +1325,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Kacie Ehinger</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Matt Geer</li>
 <li x-show="open | openall"><b>student_ratio:</b>  16-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  30% Male / 70% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Trimester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  80%</li>
@@ -1443,7 +1443,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Doug Walters</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Casey Curran</li>
 <li x-show="open | openall"><b>student_ratio:</b>  13-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  42%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  42%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  37% Male / 63% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  75%</li>
@@ -1566,7 +1566,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jenny Maurer</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Brian Doyon</li>
 <li x-show="open | openall"><b>student_ratio:</b>  30-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  70%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  70%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  45% Male / 55% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  89%</li>
@@ -1718,7 +1718,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jose \Keno\ Gandara</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Jillian Hadder</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  82%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  82%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  49% Male / 51% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  92%</li>
@@ -1897,7 +1897,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jeanne Czipri</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Laura de Rosales</li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  67%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  67%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  47% Male / 53% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  78%</li>
@@ -1999,7 +1999,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Laurel Durst</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  42%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  42%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  40% Male / 60% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  72%</li>
@@ -2107,7 +2107,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jamie Leventry</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Claire Scully</li>
 <li x-show="open | openall"><b>student_ratio:</b>  11-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  75%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  75%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  44% Male / 56% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  82%</li>
@@ -2203,7 +2203,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Tim Byram</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  14-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  71%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  71%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  86%</li>
@@ -2310,7 +2310,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Rick Squiers</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Samantha Hammond</li>
 <li x-show="open | openall"><b>student_ratio:</b>  14-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  56%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  56%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  42% Male / 58% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  80%</li>
@@ -2415,7 +2415,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Johan Dulfer</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  11-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  76%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  76%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  42% Male / 58% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  86%</li>
@@ -2569,7 +2569,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Annie DeLoid</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Benjamin Rosenthal</li>
 <li x-show="open | openall"><b>student_ratio:</b>  10-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  88%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  88%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  54% Male / 46% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Trimester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  93%</li>
@@ -2677,7 +2677,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Nathan Martell</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Giovanna Kuntze</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  22%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  22%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  65%</li>
@@ -2784,7 +2784,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Jason Skoch</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Jason Butch</li>
 <li x-show="open | openall"><b>student_ratio:</b>  13-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  49%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  49%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  51% Male / 49% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  79%</li>
@@ -2852,7 +2852,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Haley Domeck</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Andrea Doerfler</li>
 <li x-show="open | openall"><b>student_ratio:</b>  11-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  63%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  63%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  40% Male / 60% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Four-one-four plan</li>
 <li x-show="open | openall"><b>retention_rate:</b>  86%</li>
@@ -2963,7 +2963,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Alexa Keckler</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Sarah Gomish</li>
 <li x-show="open | openall"><b>student_ratio:</b>  10-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  88%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  88%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  56% Male / 44% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  95%</li>
@@ -3096,7 +3096,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b> </li>
 <li x-show="open | openall"><b>assistant_coach_name:</b> </li>
 <li x-show="open | openall"><b>student_ratio:</b>  12-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  52%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  52%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  39% Male / 61% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  73%</li>
@@ -3205,7 +3205,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Stephanie Radecki</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Jennifer McCall</li>
 <li x-show="open | openall"><b>student_ratio:</b>  18-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  44%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  44%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  42% Male / 58% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Semester</li>
 <li x-show="open | openall"><b>retention_rate:</b>  70%</li>
@@ -3319,7 +3319,7 @@
 <li x-show="open | openall"><b>head_coach_name:</b>  Kevin Aoki</li>
 <li x-show="open | openall"><b>assistant_coach_name:</b>  Darren Aoki</li>
 <li x-show="open | openall"><b>student_ratio:</b>  11-1</li>
-<li x-show="open | openall"><b>garduation_rate:</b>  68%</li>
+<li x-show="open | openall"><b>graduation_rate:</b>  68%</li>
 <li x-show="open | openall"><b>enrollment_by_gender:</b>  38% Male / 62% Female</li>
 <li x-show="open | openall"><b>calendar_system:</b>  Four-one-four plan</li>
 <li x-show="open | openall"><b>retention_rate:</b>  83%</li>
